feat: Done simple e-commerce

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=8888
-MONGODB_URL=mongodb://localhost:27017/ecommerce
+MONGODB_URL=mongodb://localhost:27017/digitic
 JWT_SECRET=donttellanyone
+CLOUD_NAME=dlv7apk13
+API_KEY=478871191848584
+SECRET_KEY=WGnCD1-l7JuOSxO0EjxuhBRqeT4
