--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "ecommerce-service",
+  "name": "ecommerce",
   "version": "1.0.0",
-  "description": "Web service for e-commerce mock",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "server": "nodemon index.js"
   },
-  "keywords": [
-    "ecommerce",
-    "mean",
-    "node",
-    "express"
-  ],
-  "author": "Muhammad Rizki",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
+    "cloudinary": "^1.41.1",
     "cookie-parser": "^1.4.6",
-    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1",
-    "slugify": "^1.6.6"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
+    "sharp": "^0.31.2",
+    "slugify": "^1.6.5",
+    "uniqid": "^5.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
