fix: Add paypal SDK and fix get product id service

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ JWT_SECRET=donttellanyone
 CLOUD_NAME=dlv7apk13
 API_KEY=478871191848584
 SECRET_KEY=WGnCD1-l7JuOSxO0EjxuhBRqeT4
+PAYPAL_MODE=sandbox
+PAYPAL_CLIENT_KEY=Aa3DfHd7txLhjhiqB_-9kRsQqMLsjqMZ1eRzmrTbbW-CdnGDA8pSp22PMKqlhnA_v6hogEAnNfG458nd
+PAYPAL_SECRET_KEY=EKCDE8t8bsuSt4RClHboIuNK_2aXusq3rVRxso38tA-B88pQGgaTfX-yi3eaXuiiksPAGQdSbEQPo3b-
