--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
+    "paypal-rest-sdk": "^1.8.1",
     "sharp": "^0.31.2",
     "slugify": "^1.6.5",
     "uniqid": "^5.4.0"
