fix: Update .env files

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8888
-MONGODB_URL=mongodb://localhost:27017/digitic
+MONGODB_URL=mongodb+srv://devrizki:devrizki@cluster0.6ogqlrb.mongodb.net/digitic
 JWT_SECRET=donttellanyone
 CLOUD_NAME=dlv7apk13
 API_KEY=478871191848584
